--- a/package.json
+++ b/package.json
@@ -9,29 +9,29 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "^14.0.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "@radix-ui/react-slot": "^1.0.2",
+    "@hookform/resolvers": "^3.3.2",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
+    "@radix-ui/react-slot": "^1.2.3",
     "@radix-ui/react-toast": "^1.1.5",
     "@radix-ui/react-tooltip": "^1.0.7",
-    "class-variance-authority": "^0.7.0",
-    "clsx": "^2.0.0",
-    "tailwind-merge": "^2.0.0",
-    "lucide-react": "^0.294.0",
-    "next-mdx-remote": "^5.0.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
+    "framer-motion": "^10.16.0",
     "gray-matter": "^4.0.3",
+    "lucide-react": "^0.294.0",
+    "next": "^14.0.0",
+    "next-mdx-remote": "^5.0.0",
+    "next-themes": "^0.2.1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-hook-form": "^7.48.0",
+    "react-intersection-observer": "^9.5.0",
     "remark": "^15.0.1",
     "remark-html": "^16.0.1",
-    "react-hook-form": "^7.48.0",
-    "@hookform/resolvers": "^3.3.2",
-    "zod": "^3.22.4",
-    "framer-motion": "^10.16.0",
-    "react-intersection-observer": "^9.5.0",
-    "next-themes": "^0.2.1",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwind-merge": "^2.6.0",
+    "tailwindcss-animate": "^1.0.7",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/node": "^20.10.0",
